# roswire

./: .buildinfo  .gitignore  .output.txt.swp  .pre-commit-config.yaml  .test.txt.swp  .travis.yml  Arch.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  NetrwTreeListing 3  Pipfile  README.md  README.rst  api.html  app.txt  ex.py  genindex.html  index.html  objects.inv  output.txt  output1.txt  py-modindex.html  recipes.html  requirements.dev.txt  ros2  search.html  searchindex.js  setup.cfg  setup.py  test.py  test.txt
.github/workflows/: mypy-flake8.yml
_modules/: index.html
_modules/roswire/: exceptions.html  roswire.html
_modules/roswire/app/: instance.html
_sources/: api.rst.txt  index.rst.txt  recipes.rst.txt
docs/: Dockerfile  api.rst  conf.py  index.rst  recipes.rst
docs/_templates/: github.html
docs/recipes/: describe_ros_package.out  describe_ros_package.py  example.diff  filepath-on-host-machine.bag  filepath-on-host-machine2.bag  inspect_runtime.py  list_all_ros_packages.out  list_all_ros_packages.py  patch_and_rebuild.py  record_to_bag.py  service_call.py
example/: Dockerfile  ardu_service_call.py  bug.bugzoo.yml  copter.parm
resources/: launch_extractor._py
src/roswire/: __init__.py  description.py  distribution.py  exceptions.py  name.py  roswire.py  system.py  util.py
src/roswire/app/: __init__.py  app.py  description.py  instance.py
src/roswire/bag/: __init__.py  core.py  daikon.py  reader.py  writer.py
src/roswire/common/: __init__.py  action.py  base.py  catkin.py  cmake.py  decode.py  encode.py  format.py  msg.py  node.py  node_manager.py  nodelet_xml.py  package.py  package_xml.py  source.py  srv.py  state.py  type_db.py
src/roswire/common/launch/: __init__.py  context.py  controller.py  launch.py  reader.py  rosparam.py  substitution.py
src/roswire/common/launch/config/: __init__.py  env.py  launch.py  node.py  parameter.py
src/roswire/common/package_xml/: __init__.py  group_dependency.py  group_membership.py  package.py  python_setup.py
src/roswire/common/roslaunch/: roslaunch.py
src/roswire/common/roslaunch/config/: __init__.py  node.py
src/roswire/definitions/: __init__.py  action.py  bag.py  base.py  decode.py  decoder.py  encode.py  format.py  msg.py  package.py  srv.py  type_db.py
src/roswire/interface/: node_manager.py
src/roswire/node/: __init__.py  manager.py  node.py
src/roswire/parameters/: __init__.py  server.py
src/roswire/proxy/: __init__.py  bag.py  catkin.py  container.py  file.py  launch.py  node.py  parameters.py  ros1.py  ros2state.py  roscore.py  roslaunch.py  service.py  shell.py  state.py  substitution.py  tcpros.py  topic.py
src/roswire/proxy/launch/: __init__.py  config.py  context.py  controller.py  launch.py  reader.py  rosparam.py  substitution.py
src/roswire/proxy/launch/config/: __init__.py  launch.py
src/roswire/proxy/roslaunch/: __init__.py  config.py  context.py  controller.py  factories.py  reader.py  ros2launch.py  roslaunch.py  rosparam.py  substitution.py
src/roswire/proxy/roslaunch/config/: __init__.py  env.py  launch.py  node.py  parameter.py
src/roswire/resources/: launch_extractor._py
src/roswire/ros1/: __init__.py  action.py  bag.py  format.py  manager.py  msg.py  node.py  node_manager.py  package.py  parameter.py  reader.py  ros1.py  roslaunch.py  source.py  srv.py  state.py  tcpros.py
src/roswire/ros1/bag/: __init__.py  core.py  player.py  reader.py  recorder.py  writer.py
src/roswire/ros1/launch/: reader.py  roslaunch.py
src/roswire/ros1/roslaunch/: __init__.py  reader.py  roslaunch.py
src/roswire/ros1/service/: manager.py  service.py
src/roswire/ros2/: .launch.py.swp  .node.py.swp  .node_manager.py.swp  .state.py.swp  .test_state.py.swp  __init__.py  action.py  format.py  launch.py  msg.py  node.py  node_manager.py  package.py  reader.py  ros2.py  service.py  service_manager.py  source.py  srv.py  state.py
src/roswire/ros2/launch/: launch.py  reader.py
src/roswire/ros2/roslaunch/: __init__.py  launch.py  reader.py
src/roswire/service/: __init__.py  manager.py  service.py
src/rozzy/: __init__.py  bag.py  container.py  description.py  exceptions.py  proxy.py  record.py  roswire.py  rozzy.py  system.py  system_instance.py
src/rozzy/ardu/: ardu.py
src/rozzy/definitions/: __init__.py  action.py  bag.py  base.py  database.py  msg.py  package.py  srv.py  type_db.py
src/rozzy/proxy/: __init__.py  bag.py  container.py  file.py  gcov.py  node.py  parameters.py  rosbag.py  rostopic.py  service.py  shell.py  tcpros.py
test/: .test_roslaunch.py.swp  .test_state.py.swp  basic.py  conftest.py  example.bag  minimal.bag  output.txt  simple.bag  test_bag.py  test_basic.py  test_basic_hw.py  test_catkin.py  test_daikon.py  test_distribution.py  test_encode_and_decode.py  test_file.py  test_format.py  test_hello_world.py  test_launch.py  test_message.py  test_name.py  test_package.py  test_primitives.py  test_roscore.py  test_roslaunch.py  test_rostopic.py  test_shell.py  test_state.py  test_substitution.py  test_tcpros.py  test_type_database.py
test/apps/: fetch.yml  husky.yml  turtlebot3-ros2.yml  turtlebot3.yml
test/format-databases/: helloworld.formats.yml  mavros.formats.yml
test/hello_world/: Dockerfile  Makefile  bug.bag  bug.diff  example.bag
test/hello_world/bug/: Dockerfile  bug.diff  non-bug.bag
test/systems/: husky.yml  turtlebot3.yml
