[metadata]
name = roswire
author = Christopher Timperley
author-email = christimperley@googlemail.com
url = https://github.com/ChrisTimperley/roswire
description = An API for testing and mutating Dockerised ROS systems.
long-description = file: README.rst, LICENSE
keywords = ros, docker, testing, analysis, mutation, repair
license = Apache License, Version 2.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
  typing-extensions >= 3.7.2
  ruamel.yaml >= 0.15.89
  toposort ~= 1.5
  docker ~= 4.1.0
  dockerblade ~= 0.5.0
  loguru ~= 0.4.1
  psutil ~= 5.6.2
  pyyaml ~= 5.1
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[aliases]
test = pytest
docs = build_sphinx

[tool:pytest]
testpaths = test
addopts = -rx -v

[flake8]
ignore = W605
max-line-length = 79
per-file-ignores =
  src/roswire/__init__.py:E402,F401
  src/roswire/proxy/__init__.py:F401
  src/roswire/proxy/roslaunch/__init__.py:F401
  src/roswire/proxy/roslaunch/config/__init__.py:F401
  src/roswire/proxy/roslaunch/reader.py:F811,E704,E501
  src/roswire/definitions/__init__.py:F401

[tox]
envlist = py36, py37, py38

[testenv]
deps =
  mypy
  flake8
  pytest
commands =
  mypy src
  flake8 src

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[options.extras_require]
test = pytest
build_sphinx =
  sphinx ~= 1.8.5
  solar-theme ~= 1.3.3
