[metadata]
name = roswire
author = Christopher Timperley
author-email = christimperley@googlemail.com
url = https://github.com/rosqual/roswire
description = An API for testing and mutating Dockerised ROS systems.
long-description = file: README.rst, LICENSE
keywords = ros, docker, testing, analysis, mutation, repair
license = Apache License, Version 2.0
classifiers =
  Natural Language :: English
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
include_package_data = True
python_requires = >= 3.6
install_requires =
  attrs ~= 19.3.0
  typing-extensions >= 3.7.2
  ruamel.yaml >= 0.15.89
  toposort ~= 1.5
  docker ~= 4.1.0
  dockerblade ~= 0.5.6
  loguru ~= 0.5.3
  psutil ~= 5.7.0
  pyyaml ~= 5.1
package_dir =
  =src
packages = find:

[options.packages.find]
where = src

[aliases]
test = pytest
docs = build_sphinx

[tool:pytest]
testpaths = test
addopts = -rx -v

[flake8]
ignore = E203, W605, D100, D101, D102, D103, D104, D105, D107, D205, D400, D401, D404, D405
max-line-length = 119
import-order-style = edited
docstring-convention = numpy
exclude = src/roswire/common/cmake.py
per-file-ignores =
  src/roswire/__init__.py:E402,F401
  src/roswire/app/__init__.py:F401
  src/roswire/common/__init__.py:F401
  src/roswire/definitions/__init__.py:F401
  src/roswire/description/__init__.py:F401
  src/roswire/parameters/__init__.py:F401
  src/roswire/proxy/__init__.py:F401
  src/roswire/common/__init__.py:F401
  src/roswire/common/launch/__init__.py:F401
  src/roswire/common/launch/config/__init__.py:F401
  src/roswire/common/launch/config/env.py:N817
  src/roswire/common/launch/config/node.py:N817
  src/roswire/common/launch/config/launch.py:N817
  src/roswire/common/launch/config/parameter.py:N817
  src/roswire/ros1/__init__.py:F401
  src/roswire/ros1/bag/__init__.py:F401
  src/roswire/ros1/launch/__init__.py:F401
  src/roswire/ros1/launch/reader.py:F811,E704,E501,N817
  src/roswire/ros1/launch/roslaunch.py:N817
  src/roswire/ros1/service/__init__.py:F401
  src/roswire/ros2/__init__.py:F401
  src/roswire/ros2/launch/__init__.py:F401

[tox]
envlist = py36, py37, py38

[testenv]
deps =
  -rrequirements.dev.txt
commands =
  flake8 src
  mypy src

[mypy]
ignore_missing_imports = False
disallow_untyped_defs = True
warn_unused_ignores = True

[mypy-roswire.common.cmake]
ignore_errors = True

[mypy-docker.*]
ignore_missing_imports = True

[mypy-toposort.*]
ignore_missing_imports = True

[mypy-psutil.*]
ignore_missing_imports = True

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[options.extras_require]
test = pytest
build_sphinx =
  sphinx ~= 1.8.5
  solar-theme ~= 1.3.3

